# drone_ws

install/: local_setup.sh  setup.sh
install/my_drone/share/ament_index/resource_index/package_run_dependencies/: my_drone
install/my_drone/share/ament_index/resource_index/parent_prefix_path/: my_drone
install/my_drone/share/my_drone/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_drone/share/my_drone/cmake/: my_droneConfig-version.cmake  my_droneConfig.cmake
install/my_drone/share/my_drone/environment/: ament_prefix_path.dsv  path.dsv
install/my_drone/share/my_drone/launch/: drone_sim.launch.py
install/my_drone/share/my_drone/models/my_drone/: model.config  model.sdf
log/: latest_build
src/my_drone/: CMakeLists.txt
src/my_drone/launch/: drone_sim.launch.py
src/my_drone/models/my_drone/: model.config  model.sdf
